Fix formatting/spacing in code

--- a/_sass/components/_project-page.scss
+++ b/_sass/components/_project-page.scss
@@ -1,46 +1,38 @@
 .project-banner {
-    background: $color-blue-dark;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: flex-start;
-    height: 100vh;
-    max-height: 300px;
-    min-height: 100vh;
-    position: relative;
-  
-    @media #{$bp-tablet-up} {
-      min-height: 0;
-    }
+  background: $color-blue-dark;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-start;
+  height: 100vh;
+  max-height: 300px;
+  min-height: 100vh;
+  position: relative;
 
-    &::after {
-      @include position(absolute, 0 0 0 0);
-      background: linear-gradient(
-        to bottom,
-        rgba($color-blue-dark, 0.3) 0%,
-        rgba($color-blue-dark, 1) 100%
-      );
-      content: "";
-      display: block;
-      z-index: 1;
-    }
+  @media #{$bp-tablet-up} {
+    min-height: 0;
+  }
+
+  &::after {
+    @include position(absolute, 0 0 0 0);
+    background: linear-gradient(
+      to bottom,
+      rgba($color-blue-dark, 0.3) 0%,
+      rgba($color-blue-dark, 1) 100%
+    );
+    content: "";
+    display: block;
+    z-index: 1;
+  }
 }
-
-// .project-page-title {
-//   background: $color-blue-dark;
-//   margin-left: 20px;
-//   color: #fa114f;
-// }
 
 .project-page-title {
   background: #ffffff;
-    padding: 0px 20px 0px 7px;
-    border: 1px solid #000;
-    margin-left: 20px;
-    color: #fa114f;
-    z-index: 2;
-    margin-left: auto;
-    margin-right: auto;
+  padding: 0px 20px 0px 7px;
+  border: 1px solid #000;
+  margin-left: 20px;
+  color: #fa114f;
+  z-index: 2;
 }
 
 .project-page-content {
@@ -82,48 +74,48 @@
 }
 
 .resource-list {
-    margin-bottom: 24px;
-    display: flex;
-    flex-wrap: wrap;
+  margin-bottom: 24px;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .resource-card {
-    background: $color-white;
-    border: 0 solid rgba($color-black, 0.06);
-    border-radius: 16px;
-    box-shadow: 0 0 8px 0 rgba($color-black, 0.2);
-    margin-bottom: 24px;
-    overflow: hidden;
+  background: $color-white;
+  border: 0 solid rgba($color-black, 0.06);
+  border-radius: 16px;
+  box-shadow: 0 0 8px 0 rgba($color-black, 0.2);
+  margin-bottom: 24px;
+  overflow: hidden;
 
-    max-width: 160px;
-    max-height: 192px;
-    display: inline-block;
-    margin-left: 10px;
-    margin-right: 10px;
+  max-width: 160px;
+  max-height: 192px;
+  display: inline-block;
+  margin-left: 10px;
+  margin-right: 10px;
 
-    @media #{$bp-tablet-up} {
-        margin-bottom: 0;
-    }
+  @media #{$bp-tablet-up} {
+      margin-bottom: 0;
+  }
 }
 
 .resource-tmb {
-    width: 128px;
-    height: 128px;
-    padding: 20px;
+  width: 128px;
+  height: 128px;
+  padding: 20px;
 }
 
 .resource-tmb-img {
-    width:100%;
-    height: 100%;
-    object-fit: cover
+  width:100%;
+  height: 100%;
+  object-fit: cover
     
 }
 
 .resource-body {
-    padding: 10px;
-    box-shadow: 0px 5px 12px 0px rgba(0, 0, 0, 0.1);
+  padding: 10px;
+  box-shadow: 0px 5px 12px 0px rgba(0, 0, 0, 0.1);
 }
 
 .resource-title {
-    margin-block-end: 0px;
+  margin-block-end: 0px;
 }
